# py-adapter

./: .flake8  README.md  pyproject.toml  tox.ini
.github/workflows/: test-package.yml
docs/: conf.py  index.rst  modules.rst  py_adapter.rst  py_adapter_plugin.rst
src/py_adapter/: __init__.py  _schema.py
src/py_adapter/plugin/: __init__.py  _avro.py  _csv.py  _json.py  avro.py  json.py
tests/: conftest.py  country.avsc  goods_with_country.avsc  test_csv.py  test_py_adapter.py  test_serialize.py
